--- a/modules/openapi-generator/src/main/resources/JavaSpring/libraries/spring-boot/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaSpring/libraries/spring-boot/pom.mustache
@@ -150,7 +150,7 @@
         </dependency>
 {{/useBeanValidation}}
 {{#virtualService}}
-    <!-- START Virtual Service API support -->
+        <!-- START Virtual Service API support -->
         <dependency>
             <groupId>io.virtualan</groupId>
             <artifactId>virtualan-plugin</artifactId>
@@ -162,13 +162,15 @@
             <artifactId>hsqldb</artifactId>
             <version>2.3.2</version>
         </dependency>
+        <!-- END Virtual Service API support -->
+{{/virtualService}}
+{{#springDataOrVirtualService}}
+        <!-- Spring Data JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>1.5.9.RELEASE</version>
         </dependency>
-    <!-- END Virtual Service API support -->
-{{/virtualService}}
+{{/springDataOrVirtualService}}
 {{#hateoas}}
         <!-- Spring HATEOAS -->
         <dependency>
